# GE-Sim-V2

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/demo_000/: actions_0.npy  eef_poses_0.npy  extrinsic_alignstate_0.npy  state_eef_poses_0.npy  state_joints_0.npy  task.txt
assets/demo_001/: actions_0.npy  eef_poses_0.npy  extrinsic_alignstate_0.npy  intrinsic.npy  state_eef_poses_0.npy  state_joints_0.npy  task.txt
assets/demo_002/: actions_0.npy  eef_poses_0.npy  extrinsic_alignstate_0.npy  state_eef_poses_0.npy  state_joints_0.npy  task.txt
configs/: gesim_v2.yaml
configs/openpi/: README.md
docs/: adding_policies.md  adding_rewards.md  adding_world_models.md  closed_loop.md  installation.md  replay.md
examples/: closed_loop.py  replay.py
openpi_serving/: README.md  pi05_gesim.py  serve_pi05.py
scripts/: serve_policy_pi05.sh  serve_world_model.sh
src/gesim/: __init__.py  action_chunk.py  checkpoints.py  env.py  episode.py  exceptions.py  types.py  video.py
src/gesim/client/: codecs.py  transport.py
src/gesim/conditioning/: band.py  kinematics.py  policy_band.py
src/gesim/models/: base.py  example.py
src/gesim/models/gesim_v2/: __init__.py  model.py  raymap.py
src/gesim/models/gesim_v2/networks/transformers/: liger_norms.py  pose_expert.py  sparge_attention.py  transformer_cosmos_multiview_PE.py  triton_rope.py
src/gesim/models/gesim_v2/pipelines/: pipeline_cosmos2_video2world.py  pipeline_cosmos_acwm_PE_eff.py  pipeline_output.py
src/gesim/models/gesim_v2/utils/: statistics.py  torch_utils.py
src/gesim/policies/: __init__.py  base.py  openpi.py
src/gesim/rewards/: __init__.py  base.py
src/gesim/server/: __main__.py  app.py  dashboard.py  session.py  status.py
tests/: conftest.py  test_action_chunk.py  test_checkpoints.py  test_codecs.py  test_conditioning.py  test_env_server_smoke.py  test_episode.py  test_gripper_units.py  test_openpi_policy.py  test_registry.py
